# matrix

./: .gitignore  .travis.yml  CMakeLists.txt
src/: main.cpp  matrix.h  version.h
